--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-"Succeeded" 
+<html>
+    <head>
+        <title>Luke Blackman</title>
+        <style>
+            .center {
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                /* bring your own prefixes */
+                transform: translate(-50%, -50%);
+            }
+        </style>
+    </head>
+
+    <body>
+        <img src="logo.gif" width="350" height="50" alt="Luke Blackman" class="center"></span>
+    </body>
+
+</html>
