--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
+
     <head>
         <title>Luke Blackman</title>
         <style>
+            body { background: #fff; }
             .center {
                 position: fixed;
                 top: 50%;
