--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
                 position: fixed;
                 top: 50%;
                 left: 50%;
-                /* bring your own prefixes */
                 transform: translate(-50%, -50%);
             }
         </style>
@@ -17,5 +16,15 @@
     <body>
         <img src="logo.gif" width="350" height="50" alt="Luke Blackman" class="center"></span>
     </body>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172475217-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-172475217-1');
+    </script>
 
 </html>
