Added portfolio images

--- a/index.html
+++ b/index.html
@@ -4,17 +4,32 @@
         <title>Luke Blackman</title>
         <style>
             body { background: #fff; }
-            .center {
-                position: fixed;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+            #container {
+                margin: auto;
+                width: 1200px;
+            }
+            .logo {
+                margin-top: 25px;
+            }
+            .photo {
+                margin-top: 25px;
+                width: 1200px;
             }
         </style>
     </head>
 
     <body>
-        <img src="logo.gif" width="350" height="50" alt="Luke Blackman" class="center"></span>
+        <div id="container">
+            <img class="logo" src="logo.gif" width="145" height="40" alt="Luke Blackman" />
+            <img class="photo" src="photos/1.jpg" />
+            <img class="photo" src="photos/2.jpg" />
+            <img class="photo" src="photos/3.jpg" />
+            <img class="photo" src="photos/4.jpg" />
+            <img class="photo" src="photos/5.jpg" />
+            <img class="photo" src="photos/6.jpg" />
+            <img class="photo" src="photos/7.jpg" />
+            <img class="photo" src="photos/8.jpg" />            
+        </div>
     </body>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
