--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
                 width: 1200px;
             }
             .logo {
-                margin-top: 25px;
+                margin: 25px 0 0 0;
             }
             .photo {
-                margin-top: 25px;
-                width: 1200px;
+                margin: 25px auto;
+		display: block;
+		text-align: center;
             }
         </style>
     </head>
