--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Luke Blackman</title>
         <style>
+            * { padding: 0; margin: 0; }
             body { background: #fff; }
             #container {
                 margin: auto;
@@ -13,8 +14,8 @@
             }
             .photo {
                 margin: 25px auto;
-		display: block;
-		text-align: center;
+                display: block;
+                text-align: center;
             }
         </style>
     </head>
