--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <img class="photo" src="photos/4.jpg" />
             <img class="photo" src="photos/5.jpg" />
             <img class="photo" src="photos/6.jpg" />
+	    <img class="photo" src="photos/7.jpg" />
+            <img class="photo" src="photos/8.jpg" />
+            <img class="photo" src="photos/9.jpg" />
         </div>
     </body>
 
