--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <img class="photo" src="photos/6.jpg" />
 	    <img class="photo" src="photos/7.jpg" />
             <img class="photo" src="photos/8.jpg" />
+            <img class="photo" src="photos/9.jpg" />
         </div>
     </body>
 
