--- a/index.html
+++ b/index.html
@@ -1,48 +1,70 @@
 <html>
 
-    <head>
-        <title>Luke Blackman</title>
-        <style>
-            * { padding: 0; margin: 0; }
-            body { background: #fff; }
-            #container {
-                margin: auto;
-                width: 1200px;
-            }
-            .logo {
-                margin: 25px 0 0 0;
-            }
-            .photo {
-                margin: 25px auto;
-                display: block;
-                text-align: center;
-            }
-        </style>
-    </head>
+<head>
+  <title>Luke Blackman</title>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+    }
 
-    <body>
-        <div id="container">
-            <img class="logo" src="logo.gif" width="145" height="40" alt="Luke Blackman" />
-            <img class="photo" src="photos/1.jpg" />
-            <img class="photo" src="photos/2.jpg" />
-            <img class="photo" src="photos/3.jpg" />
-            <img class="photo" src="photos/4.jpg" />
-            <img class="photo" src="photos/5.jpg" />
-            <img class="photo" src="photos/6.jpg" />
-	    <img class="photo" src="photos/7.jpg" />
-            <img class="photo" src="photos/8.jpg" />
-            <img class="photo" src="photos/9.jpg" />
-        </div>
-    </body>
+    body {
+      background: #fff;
+    }
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172475217-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    #container {
+      margin: auto;
+      width: 1200px;
+    }
 
-    gtag('config', 'UA-172475217-1');
-    </script>
+    .logo {
+      margin: 25px 0 0 0;
+    }
+
+    .photo {
+      margin: 25px auto;
+      display: block;
+      text-align: center;
+    }
+
+    @media only screen and (max-width: 1200px) {
+      #container {
+        width: 100%;
+      }
+
+      .photo {
+        width: 100%;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div id="container">
+    <img class="logo" src="logo.gif" width="145" height="40" alt="Luke Blackman" />
+    <img class="photo" src="photos/1.jpg" />
+    <img class="photo" src="photos/2.jpg" />
+    <img class="photo" src="photos/3.jpg" />
+    <img class="photo" src="photos/4.jpg" />
+    <img class="photo" src="photos/5.jpg" />
+    <img class="photo" src="photos/6.jpg" />
+    <img class="photo" src="photos/7.jpg" />
+    <img class="photo" src="photos/8.jpg" />
+    <img class="photo" src="photos/9.jpg" />
+  </div>
+</body>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172475217-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', 'UA-172475217-1');
+</script>
 
 </html>
