Change mobile resolution

--- a/index.html
+++ b/index.html
@@ -27,12 +27,8 @@
       text-align: center;
     }
 
-    @media only screen and (max-width: 1200px) {
-      #container {
-        width: 100%;
-      }
-
-      .photo {
+    @media only screen and (max-width: 1024px) {
+      #container, .photo {
         width: 100%;
       }
     }
