--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <img class="photo" src="photos/7.jpg" />
     <img class="photo" src="photos/8.jpg" />
     <img class="photo" src="photos/9.jpg" />
+    <img class="photo" src="photos/10.jpg" />
   </div>
 </body>
 
