--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <img class="photo" src="photos/1.jpg" />
     <img class="photo" src="photos/2.jpg" />
     <img class="photo" src="photos/3.jpg" />
-    <img class="photo" src="photos/4.jpg" />
-    <img class="photo" src="photos/5.jpg" />
+    <!-- <img class="photo" src="photos/4.jpg" /> -->
+    <!-- <img class="photo" src="photos/5.jpg" /> -->
     <img class="photo" src="photos/6.jpg" />
     <img class="photo" src="photos/7.jpg" />
-    <img class="photo" src="photos/8.jpg" />
+    <!-- <img class="photo" src="photos/8.jpg" /> -->
     <img class="photo" src="photos/9.jpg" />
     <img class="photo" src="photos/10.jpg" />
   </div>
