Added new photo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <img class="photo" src="photos/1.jpg" />
     <img class="photo" src="photos/2.jpg" />
     <img class="photo" src="photos/3.jpg" />
-    <!-- <img class="photo" src="photos/4.jpg" /> -->
+    <img class="photo" src="photos/4.jpg" />
     <!-- <img class="photo" src="photos/5.jpg" /> -->
     <img class="photo" src="photos/6.jpg" />
     <img class="photo" src="photos/7.jpg" />
