--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- <img class="photo" src="photos/5.jpg" /> -->
     <img class="photo" src="photos/6.jpg" />
     <img class="photo" src="photos/7.jpg" />
-    <!-- <img class="photo" src="photos/8.jpg" /> -->
+    <img class="photo" src="photos/8.jpg" />
     <img class="photo" src="photos/9.jpg" />
     <img class="photo" src="photos/10.jpg" />
   </div>
